force-app/main/default/objects/Reporting_Snapshot__c/Reporting_Snapshot__c.object-meta.xml
<CustomObject>
    <description>This object will capture the record history for analysis purposes.</description>
    <label>Reporting Snapshot</label>
    <nameField>
        <displayFormat>RS-{000000000}</displayFormat>
        <label>Reporting Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>