force-app/main/default/objects/Reporting_Snapshot__c/fields/No_of_Cases_By_Origin__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cases_By_Origin__c</fullName>
    <label>No. of Cases(By Origin)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>